# 42-piscine-cpp

./: .gitignore
cpp00/: .gitignore  CMakeLists.txt
cpp00/ex00/: Makefile  megaphone.cpp
cpp00/ex01/: Makefile
cpp00/ex01/include/: Contact.hpp  PhoneBook.hpp  input.hpp
cpp00/ex01/src/: input.cpp  main.cpp
cpp00/ex01/src/classes/: Contact.cpp  PhoneBook.cpp
cpp00/ex02/: Account.cpp  Makefile
cpp01/: .gitignore
cpp01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  randomChump.cpp
cpp01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
cpp01/ex02/: Makefile  main.cpp
cpp01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp
cpp01/ex04/: Makefile  main.cpp
cpp01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp02/: CMakeLists.txt
cpp02/ex00/: Fixed.cpp  Fixed.h  Makefile  ex00
cpp02/ex01/: Fixed.cpp  Fixed.h  Makefile  main.cpp
cpp02/ex02/: Fixed.cpp  Fixed.h  Makefile  main.cpp
cpp02/ex03/: Fixed.cpp  Fixed.h  Makefile  Point.cpp  Point.h  bsp.cpp  main.cpp
cpp03/ex00/: ClapTrap.cpp  ClapTrap.h  Makefile  ex00  main.cpp
cpp03/ex01/: ClapTrap.cpp  ClapTrap.h  Makefile  ScavTrap.cpp  ScavTrap.h  main.cpp
cpp03/ex02/: ClapTrap.cpp  FragTrap.cpp  FragTrap.h  Makefile  ScavTrap.h  main.cpp
cpp03/ex03/: ClapTrap.h  DiamondTrap.cpp  DiamondTrap.h  FragTrap.h  Makefile  ScavTrap.h  main.cpp
cpp04/ex00/: Makefile  main.cpp
cpp04/ex01/: Makefile  main.cpp
cpp04/ex02/: Makefile  main.cpp
cpp04/ex03/: .gitignore  AMateria.cpp  (+13 more)
(+101 files in other folders)
